Support update with returning clause (#2544)